--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "jwt-decode": "^3.1.2",
     "ngx-toastr": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
